--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@types/crypto-js": "^4.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.2",
-    "@types/node-localstorage": "^1.3.0",
     "@types/sinon": "^10.0.12",
     "@types/ws": "^8.5.3",
     "chai": "^4.3.6",
@@ -55,7 +54,7 @@
     "tsconfig-paths": "^4.0.0",
     "tslib": "^2.4.0",
     "tsup": "^7.2.0",
-    "typescript": "4.8.0-dev.20220728"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "axios": "1.2.1",
@@ -63,7 +62,6 @@
     "crypto-js": "^4.1.1",
     "dayjs": "1.11.7",
     "log4js": "6.7.1",
-    "node-localstorage": "^2.2.1",
     "ws": "8.11.0"
   },
   "repository": {
